--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     implementation "com.google.firebase:firebase-firestore-ktx"
     implementation "com.google.firebase:firebase-storage-ktx"
 
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
