--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 02 13:08:59 MSK 2023
-sdk.dir=/Users/monkemaster/Library/Android/sdk
+#Mon Dec 04 21:17:15 MSK 2023
+sdk.dir=C\:\\sdk
